--- a/src/resources/GerenciarEstoque.fxml
+++ b/src/resources/GerenciarEstoque.fxml
@@ -14,7 +14,7 @@
 
 <AnchorPane prefHeight="576.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.GerenciarInsumo">
    <children>
-      <Text layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gerenciar insumo">
+      <Text layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gerenciar estoque">
          <font>
             <Font name="Corbel Light" size="17.0" />
          </font>
@@ -33,6 +33,7 @@
                 <TableColumn fx:id="cNome" prefWidth="140.6666568517685" text="Nome" />
                 <TableColumn fx:id="cFornecedor" prefWidth="155.33331298828125" text="Fornecedor" />
                  <TableColumn fx:id="cValor" prefWidth="155.33331298828125" text="Valor" />
+                  <TableColumn fx:id="cQuantidade" prefWidth="155.33331298828125" text="Quantidade" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -43,9 +44,10 @@
       <FlowPane fx:id="formularioPane" hgap="10.0" layoutX="11.0" layoutY="268.0" prefHeight="108.0" prefWidth="646.0" vgap="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
          <children>
             <TextField fx:id="txtNome" prefHeight="25.0" prefWidth="257.0" promptText="Nome" />
-            <TextField fx:id="txtQuantidade" prefHeight="25.0" prefWidth="195.0" promptText="Quantidade inicial" />
-            <TextField fx:id="txtValor" prefHeight="25.0" prefWidth="166.0" promptText="Valor" />
-            <ComboBox fx:id="cbFornecedor" prefHeight="25.0" prefWidth="258.0" promptText="Fornecedor" />
+            <TextField fx:id="txtTipo" prefHeight="25.0" prefWidth="195.0" promptText="Tipo" />
+            <TextField fx:id="txtQuantidade" prefHeight="25.0" prefWidth="173.0" promptText="Quantidade inicial (g)" />
+            <TextField fx:id="txtValor" prefHeight="25.0" prefWidth="256.0" promptText="Valor" />
+            <ComboBox fx:id="cbFornecedor" prefHeight="25.0" prefWidth="195.0" promptText="Fornecedor" />
             <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="638.0" spacing="10.0">
                <children>
                   <Button fx:id="btnSalvar" mnemonicParsing="false" onAction="#salvar" text="Salvar" />
