--- a/src/resources/GerenciarTanque.fxml
+++ b/src/resources/GerenciarTanque.fxml
@@ -19,7 +19,7 @@
             <Font name="Corbel Light" size="17.0" />
          </font>
       </Text>
-      <VBox alignment="TOP_RIGHT" layoutX="14.0" layoutY="60.0" prefHeight="200.0" prefWidth="633.0" spacing="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
+      <VBox alignment="TOP_RIGHT" layoutX="14.0" layoutY="60.0" prefHeight="271.0" prefWidth="633.0" spacing="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
          <children>
             <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="411.0" spacing="10.0">
                <children>
@@ -28,7 +28,7 @@
                   <Button fx:id="btnExcluir" mnemonicParsing="false" onAction="#excluir" text="Excluir" />
                </children>
             </HBox>
-            <TableView fx:id="tableViewTanque" fixedCellSize="0.0" prefHeight="165.0" prefWidth="547.0">
+            <TableView fx:id="tableViewTanque" fixedCellSize="0.0" prefHeight="129.0" prefWidth="633.0">
               <columns>
                 <TableColumn fx:id="cEspecie" prefWidth="140.6666568517685" text="Espécie" />
                 <TableColumn fx:id="cDataInicio" prefWidth="155.33331298828125" text="Data início" />
@@ -38,34 +38,49 @@
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
             </TableView>
+            <FlowPane fx:id="formularioPane" hgap="10.0" prefHeight="108.0" prefWidth="647.0" vgap="10.0">
+               <children>
+                  <ComboBox fx:id="cbEspecie" prefHeight="25.0" prefWidth="179.0" promptText="Espécie" />
+                  <TextField fx:id="txtQuantidadePeixes" prefHeight="25.0" prefWidth="129.0" promptText="Quantidade peixes" />
+                  <TextField fx:id="txtPrecoManutencao" prefHeight="25.0" prefWidth="117.0" promptText="Preço manutenção" />
+                  <TextField fx:id="txtDataInicio" prefHeight="25.0" prefWidth="177.0" promptText="Data início" />
+                  <TextField fx:id="txtDataInicio1" prefHeight="25.0" prefWidth="162.0" promptText="Data início" />
+                  <TextField fx:id="txtPesoMedioInicio" prefHeight="25.0" prefWidth="123.0" promptText="Peso médio inicial" />
+                  <TextField fx:id="txtQuantidadeRacaoDiaria" prefHeight="25.0" prefWidth="163.0" promptText="Quantidade ração diária" />
+                  <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="633.0" spacing="10.0">
+                     <children>
+                        <Button fx:id="btnSalvar" mnemonicParsing="false" onAction="#salvar" text="Salvar" />
+                        <Button fx:id="btnCancelar" mnemonicParsing="false" onAction="#cancelar" text="Cancelar" />
+                     </children>
+                  </HBox>
+               </children>
+            </FlowPane>
          </children>
       </VBox>
-      <FlowPane fx:id="formularioPane" hgap="10.0" layoutX="14.0" layoutY="399.0" prefHeight="108.0" prefWidth="647.0" vgap="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
+      <VBox layoutX="14.0" layoutY="342.0" prefHeight="200.0" prefWidth="633.0">
          <children>
-            <ComboBox fx:id="cbEspecie" prefHeight="25.0" prefWidth="179.0" promptText="Espécie" />
-            <TextField fx:id="txtQuantidadePeixes" prefHeight="25.0" prefWidth="129.0" promptText="Quantidade peixes" />
-            <TextField fx:id="txtPrecoManutencao" prefHeight="25.0" prefWidth="132.0" promptText="Preço manutenção" />
-            <TextField fx:id="txtDataInicio" prefHeight="25.0" prefWidth="147.0" promptText="Data início" />
-            <TextField fx:id="txtPesoMedioInicio" prefHeight="25.0" prefWidth="179.0" promptText="Peso médio inicial" />
-            <TextField fx:id="txtPesoMedioAtual" prefHeight="25.0" prefWidth="129.0" promptText="Peso médio atual" />
-            <TextField fx:id="txtQuantidadeRacaoDiaria" prefHeight="25.0" prefWidth="148.0" promptText="Quantidade ração diária" />
-            <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="633.0" spacing="10.0">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Histórico semanal" />
+            <TableView fx:id="tableViewHistoricoSemanal" prefHeight="95.0" prefWidth="634.0">
+              <columns>
+                <TableColumn fx:id="cDataLancada" prefWidth="193.3333387374878" text="Data lançada" />
+                <TableColumn fx:id="cPesoMedio" prefWidth="171.3333282470703" text="Peso médio" />
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+            <FlowPane prefHeight="65.0" prefWidth="633.0" vgap="20.0">
                <children>
-                  <Button fx:id="btnSalvar" mnemonicParsing="false" onAction="#salvar" text="Salvar" />
-                  <Button fx:id="btnCancelar" mnemonicParsing="false" onAction="#cancelar" text="Cancelar" />
+                  <TextField fx:id="txtPesoMedioAtual" prefHeight="25.0" prefWidth="129.0" promptText="Peso médio atual" />
+                  <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="126.0" spacing="10.0">
+                     <children>
+                        <Button fx:id="btnSalvarHistorico" mnemonicParsing="false" onAction="#salvarHistorico" text="Salvar" />
+                        <Button fx:id="btnCancelarHistorico" mnemonicParsing="false" onAction="#cancelarHistorico" text="Cancelar" />
+                     </children>
+                  </HBox>
                </children>
-            </HBox>
+            </FlowPane>
          </children>
-      </FlowPane>
-      <TableView fx:id="tableViewHistoricoSemanal" layoutX="14.0" layoutY="286.0" prefHeight="95.0" prefWidth="634.0">
-        <columns>
-          <TableColumn fx:id="cDataLancada" prefWidth="193.3333387374878" text="Data lançada" />
-          <TableColumn fx:id="cPesoMedio" prefWidth="171.3333282470703" text="Peso médio" />
-        </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-      <Text layoutX="14.0" layoutY="282.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Histórico semanal" />
+      </VBox>
    </children>
 </AnchorPane>
